--- a/index.css
+++ b/index.css
@@ -12,12 +12,14 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .background-rows {
+  flex-grow: 1;
   position: relative;
   width: 100%;
-  height: 25%;
 }
 
 svg {
@@ -25,63 +27,63 @@ svg {
 }
 
 .little-clouds {
-  width: 150px;
+  width: 10rem;
 }
 
 .big-clouds {
-  width: 300px;
+  width: 19rem;
 }
 
 .background-rows:first-child {
-  margin-top: 50px;
-  display: flex;
-  justify-content: space-around;
+  margin-top: 3.125rem;
+}
+.background-rows:first-child svg:first-child {
+  left: 12.5rem;
+}
+.background-rows:first-child svg:nth-child(2) {
+  margin-left: 60rem;
 }
 .background-rows:first-child svg:last-child {
-  margin-top: -200px;
+  right: 15rem;
+  top: -7.5rem;
 }
 
 .background-rows:nth-child(2) {
-  margin-top: 70px;
-  display: flex;
+  margin-top: 4.375rem;
 }
 .background-rows:nth-child(2) svg:first-child {
-  margin-left: 200px;
+  left: calc(15rem - 100vw);
 }
 .background-rows:nth-child(2) svg:nth-child(2) {
-  margin-top: 50px;
-  margin-left: 400px;
+  top: 3.125rem;
+  left: calc(50rem - 100vw);
 }
 .background-rows:nth-child(2) svg:last-child {
-  margin-bottom: 100px;
-  margin-left: 250px;
+  bottom: 7rem;
+  right: calc(25rem - 100vw);
 }
 
 .background-rows:nth-child(3) {
   margin-top: 20px;
-  display: flex;
-  justify-content: space-evenly;
 }
 .background-rows:nth-child(3) svg:first-child {
-  margin-left: -150px;
-  margin-top: 50px;
+  margin-left: -9.375rem;
+  margin-top: 3.125rem;
 }
 .background-rows:nth-child(3) svg:nth-child(2) {
-  margin-top: 50px;
-  margin-left: 250px;
+  margin-top: 3.125rem;
+  margin-left: 15.625rem;
 }
 .background-rows:nth-child(3) svg:last-child {
-  margin-top: 100px;
-  margin-left: 200px;
+  margin-top: 6.25rem;
+  margin-left: 12.5rem;
 }
 
 .background-rows:last-child {
-  margin-top: 60px;
-  display: flex;
-  justify-content: space-around;
+  margin-top: 3.75rem;
 }
 .background-rows:last-child svg:nth-child(2) {
-  margin-left: -200px;
+  margin-left: -12.5rem;
 }
 
 /*# sourceMappingURL=index.css.map */
